3.11.0/_sources/gallery/lines_bars_and_markers/hat_graph.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/lines_bars_and_markers/hat_graph.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. meta::
        :keywords: codex

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gallery_lines_bars_and_markers_hat_graph.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_lines_bars_and_markers_hat_graph.py:


=========
Hat graph
=========
This example shows how to create a `hat graph`_ and how to annotate it with
labels.

.. _hat graph: https://doi.org/10.1186/s41235-019-0182-3

.. GENERATED FROM PYTHON SOURCE LINES 10-64

.. code-block:: Python

    import matplotlib.pyplot as plt
    import numpy as np


    def hat_graph(ax, xlabels, values, group_labels):
        """
        Create a hat graph.

        Parameters
        ----------
        ax : matplotlib.axes.Axes
            The Axes to plot into.
        xlabels : list of str
            The category names to be displayed on the x-axis.
        values : (M, N) array-like
            The data values.
            Rows are the groups (len(group_labels) == M).
            Columns are the categories (len(xlabels) == N).
        group_labels : list of str
            The group labels displayed in the legend.
        """

        values = np.asarray(values)
        color_cycle_colors = plt.rcParams['axes.prop_cycle'].by_key()['color']

        # Draw the hats
        bars = ax.grouped_bar(
            (values - values[0]).T, bottom=values[0], tick_labels=xlabels,
            labels=group_labels, edgecolor='black', group_spacing=0.8,
            colors=['none'] + color_cycle_colors)

        # Attach a text label on top of each bar
        for bc, heights in zip(bars.bar_containers, values):
            ax.bar_label(bc, heights, padding=4)


    # Initialise labels and a numpy array make sure you have
    # N labels of N number of values in the array
    xlabels = ['I', 'II', 'III', 'IV', 'V']
    playerA = np.array([5, 15, 22, 20, 25])
    playerB = np.array([25, 32, 34, 30, 27])

    fig, ax = plt.subplots(layout='constrained')

    hat_graph(ax, xlabels, [playerA, playerB], ['Player A', 'Player B'])

    # Add some text for labels, title and custom x-axis tick labels, etc.
    ax.set_xlabel('Games')
    ax.set_ylabel('Score')
    ax.set_ylim(0, 60)
    ax.set_title('Scores by number of game and players')
    ax.legend()

    plt.show()



.. image-sg:: /gallery/lines_bars_and_markers/images/sphx_glr_hat_graph_001.png
   :alt: Scores by number of game and players
   :srcset: /gallery/lines_bars_and_markers/images/sphx_glr_hat_graph_001.png, /gallery/lines_bars_and_markers/images/sphx_glr_hat_graph_001_2_00x.png 2.00x
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 65-78

.. admonition:: References

   The use of the following functions, methods, classes and modules is shown
   in this example:

   - `matplotlib.axes.Axes.grouped_bar` / `matplotlib.pyplot.grouped_bar`
   - `matplotlib.axes.Axes.bar_label` / `matplotlib.pyplot.bar_label`

.. tags::

   component: annotation
   plot-type: bar
   level: beginner


.. _sphx_glr_download_gallery_lines_bars_and_markers_hat_graph.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: hat_graph.ipynb <hat_graph.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: hat_graph.py <hat_graph.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: hat_graph.zip <hat_graph.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
